# bookviz

./: .gitignore  IDEAS.md  README.md  pyproject.toml
bookviz/: __init__.py  cli.py  colors.py  fetch.py  render_html.py  render_png.py  render_set.py  render_skyline.py
examples/: moby-dick.html
