[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bookviz"
version = "0.1.0"
description = "Generate 'every color in <book>' posters from public domain texts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
png = ["pillow>=9"]

[project.scripts]
bookviz = "bookviz.cli:main"

[tool.setuptools]
packages = ["bookviz"]
